feat: 키워드 필터링 기능 적용